# chacha20-poly1305-aead-cpp

./: CMakeLists.txt  README.en.md  README.pt.md
demo/: rfc_vector.cpp
include/: chacha20.hpp  chacha20_poly1305.hpp  helper.hpp  poly1305.hpp
include/benchmarking/: benchmark.hpp
